@@ -3,12 +3,13 @@ package com.sprint.mission.discodeit.service.basic;
 import com.sprint.mission.discodeit.domain.BinaryContent;
 import com.sprint.mission.discodeit.domain.User;
 import com.sprint.mission.discodeit.domain.UserStatus;
+import com.sprint.mission.discodeit.dto.UserDto;
 import com.sprint.mission.discodeit.dto.request.BinaryContentCreateRequest;
 import com.sprint.mission.discodeit.dto.request.UserCreateRequest;
-import com.sprint.mission.discodeit.dto.UserDto;
 import com.sprint.mission.discodeit.dto.request.UserUpdateRequest;
 import com.sprint.mission.discodeit.exception.user.UserAlreadyExistException;
 import com.sprint.mission.discodeit.exception.user.UserNotFoundException;
+import com.sprint.mission.discodeit.exception.userStatus.UserStatusNotFoundException;
 import com.sprint.mission.discodeit.mapper.UserMapper;
 import com.sprint.mission.discodeit.repository.BinaryContentRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
@@ -17,10 +18,8 @@ import com.sprint.mission.discodeit.service.UserService;
 import com.sprint.mission.discodeit.storage.BinaryContentStorage;
 import java.time.Instant;
 import java.util.List;
-import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -70,40 +69,15 @@ public class BasicUserService implements UserService {
 
     userStatusRepository.save(userStatus);
 
-    boolean online = user.getStatus().isOnline();
-    return userMapper.toDto(createdUser, online);
+    return userMapper.toDto(createdUser);
   }
 
   @Transactional(readOnly = true)
   @Override
   public UserDto findById(UUID userId) {
-    User user = userRepository.findById(userId)
-        .orElseThrow(() -> new UserNotFoundException(userId));
-    boolean online = user.getStatus().isOnline();
-
-    return userMapper.toDto(user, online);
-  }
-
-  @Transactional(readOnly = true)
-  @Override
-  public UserDto findByUsername(String username) {
-    return userRepository.findByUsername(username)
-        .map(user -> {
-          boolean online = user.getStatus().isOnline();
-          return userMapper.toDto(user, online);
-        })
-        .orElse(null);
-  }
-
-  @Transactional(readOnly = true)
-  @Override
-  public UserDto findByEmail(String email) {
-    return userRepository.findByEmail(email)
-        .map(user -> {
-          boolean online = user.getStatus().isOnline();
-          return userMapper.toDto(user, online);
-        })
-        .orElse(null);
+    return userRepository.findById(userId)
+        .map(userMapper::toDto)
+        .orElseThrow(() -> UserNotFoundException.byId(userId));
   }
 
   @Transactional(readOnly = true)
@@ -111,11 +85,8 @@ public class BasicUserService implements UserService {
   public List<UserDto> findAll() {
     return userRepository.findAll()
         .stream()
-        .map(user -> {
-          boolean online = user.getStatus().isOnline();
-          return userMapper.toDto(user, online);
-        })
-        .collect(Collectors.toList());
+        .map(userMapper::toDto)
+        .toList();
   }
 
   @Transactional
@@ -123,7 +94,7 @@ public class BasicUserService implements UserService {
   public UserDto updateUser(UUID userId, UserUpdateRequest request,
       Optional<BinaryContentCreateRequest> optionalProfileCreateRequest) {
     User user = userRepository.findById(userId)
-        .orElseThrow(() -> new UserNotFoundException(userId));
+        .orElseThrow(() -> UserNotFoundException.byId(userId));
 
     String newUsername = request.newUsername();
     String newEmail = request.newEmail();
@@ -154,16 +125,15 @@ public class BasicUserService implements UserService {
         .orElse(null);
 
     user.update(newUsername, newEmail, newPassword, nullableProfile);
-    boolean online = user.getStatus().isOnline();
 
-    return userMapper.toDto(user, online);
+    return userMapper.toDto(user);
   }
 
   @Transactional
   @Override
   public void deleteUser(UUID userId) {
     User user = userRepository.findById(userId)
-        .orElseThrow(() -> new UserNotFoundException(userId));
+        .orElseThrow(() -> UserNotFoundException.byId(userId));
 
     if (user.getProfile() != null && user.getProfile().getId() != null) {
       UUID profileId = user.getProfile().getId();
@@ -172,7 +142,8 @@ public class BasicUserService implements UserService {
     }
 
     UserStatus userStatus = userStatusRepository.findByUserId(user.getId())
-        .orElseThrow(() -> new NoSuchElementException("해당 사용자의 UserStatus를 찾을 수 없습니다: " + userId));
+        .orElseThrow(
+            () -> UserStatusNotFoundException.byUserId(userId));
     userStatusRepository.deleteById(userStatus.getId());
 
     userRepository.deleteById(userId);
